--- a/src/PropertyValidator.ValidationPack.csproj
+++ b/src/PropertyValidator.ValidationPack.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Company>Nkraft</Company>
     <Authors>Mark Laureta</Authors>
     <Description>Contains common validation rules for PropertyValidator</Description>
